# KEcm

./: .kdev_include_paths  CMakeLists.txt  GenerateQtSOAPConfig.cmake  KEcm.cpp  KEcm.h  KEcm.kdev4  KEcmAuthentication.cpp  KEcmAuthentication.h  KEcmConfigure.cpp  KEcmConfigure.h  KEcmSettings.kcfg  KEcmSettings.kcfgc  README.md  conexao.ui  main.cpp
.kdev4/: KEcm.kdev4  WebServicesConsume.kdev4
lib/: libQtSoap.so.1.0.0  libQtSolutions_SOAP-head.so.1
